// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convert from raw tree draft content state 1`] = `
Object {
  "A": Object {
    "characterList": Array [],
    "children": Array [
      "B",
      "E",
    ],
    "data": Object {},
    "depth": 0,
    "key": "A",
    "nextSibling": null,
    "parent": null,
    "prevSibling": null,
    "text": "",
    "type": "unstyled",
  },
  "B": Object {
    "characterList": Array [],
    "children": Array [
      "C",
      "D",
    ],
    "data": Object {},
    "depth": 0,
    "key": "B",
    "nextSibling": "E",
    "parent": "A",
    "prevSibling": null,
    "text": "",
    "type": "unstyled",
  },
  "C": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "C",
    "nextSibling": "D",
    "parent": "B",
    "prevSibling": null,
    "text": "left block",
    "type": "unstyled",
  },
  "D": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "D",
    "nextSibling": null,
    "parent": "B",
    "prevSibling": "C",
    "text": "right block",
    "type": "unstyled",
  },
  "E": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "E",
    "nextSibling": null,
    "parent": "A",
    "prevSibling": "B",
    "text": "This is a tree based document!",
    "type": "header-one",
  },
}
`;

exports[`ignore empty children array 1`] = `
Object {
  "A": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "A",
    "nextSibling": "B",
    "parent": null,
    "prevSibling": null,
    "text": "A",
    "type": "ordered-list-item",
  },
  "B": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "B",
    "nextSibling": "C",
    "parent": null,
    "prevSibling": "A",
    "text": "B",
    "type": "ordered-list-item",
  },
  "C": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "C",
    "nextSibling": null,
    "parent": null,
    "prevSibling": "B",
    "text": "C",
    "type": "ordered-list-item",
  },
}
`;

exports[`ignore empty children array for tree conversion 1 1`] = `
Object {
  "A": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "A",
    "nextSibling": "B",
    "parent": null,
    "prevSibling": null,
    "text": "A",
    "type": "ordered-list-item",
  },
  "B": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "B",
    "nextSibling": "C",
    "parent": null,
    "prevSibling": "A",
    "text": "B",
    "type": "ordered-list-item",
  },
  "C": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "C",
    "nextSibling": null,
    "parent": null,
    "prevSibling": "B",
    "text": "C",
    "type": "ordered-list-item",
  },
}
`;

exports[`ignore empty children array for tree conversion 2 1`] = `
Object {
  "A": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "A",
    "nextSibling": "B",
    "parent": null,
    "prevSibling": null,
    "text": "A",
    "type": "ordered-list-item",
  },
  "B": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "B",
    "nextSibling": "C",
    "parent": null,
    "prevSibling": "A",
    "text": "B",
    "type": "ordered-list-item",
  },
  "C": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "C",
    "nextSibling": null,
    "parent": null,
    "prevSibling": "B",
    "text": "C",
    "type": "ordered-list-item",
  },
}
`;

exports[`must be able to convert content blocks that have list with depth from raw state to tree state when experimentalTreeDataSupport is enabled 1`] = `
Object {
  "A": Object {
    "characterList": Array [],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "A",
    "nextSibling": "key0",
    "parent": null,
    "prevSibling": null,
    "text": "",
    "type": "ordered-list-item",
  },
  "B": Object {
    "characterList": Array [],
    "children": Array [],
    "data": Object {},
    "depth": 1,
    "key": "B",
    "nextSibling": "key1",
    "parent": "key0",
    "prevSibling": null,
    "text": "",
    "type": "ordered-list-item",
  },
  "C": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 2,
    "key": "C",
    "nextSibling": null,
    "parent": "key1",
    "prevSibling": null,
    "text": "deeply nested list",
    "type": "ordered-list-item",
  },
  "key0": Object {
    "characterList": Array [],
    "children": Array [
      "B",
      "key1",
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "nextSibling": null,
    "parent": null,
    "prevSibling": "A",
    "text": "",
    "type": "ordered-list-item",
  },
  "key1": Object {
    "characterList": Array [],
    "children": Array [
      "C",
    ],
    "data": Object {},
    "depth": 1,
    "key": "key1",
    "nextSibling": null,
    "parent": "key0",
    "prevSibling": "B",
    "text": "",
    "type": "ordered-list-item",
  },
}
`;

exports[`must be able to convert from raw state to tree state when experimentalTreeDataSupport is enabled 1`] = `
Object {
  "A": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "A",
    "nextSibling": "B",
    "parent": null,
    "prevSibling": null,
    "text": "AAAA",
    "type": "unstyled",
  },
  "B": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "B",
    "nextSibling": "C",
    "parent": null,
    "prevSibling": "A",
    "text": "BBBB",
    "type": "unstyled",
  },
  "C": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "C",
    "nextSibling": null,
    "parent": null,
    "prevSibling": "B",
    "text": "CCCC",
    "type": "unstyled",
  },
}
`;

exports[`must be able to convert from styled blocks and entities mapped raw state 1`] = `
Object {
  "a": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "a",
    "text": "Alpha",
    "type": "unstyled",
  },
  "b": Object {
    "characterList": Array [
      Object {
        "entity": "1",
        "style": Array [
          "BOLD",
        ],
      },
      Object {
        "entity": "1",
        "style": Array [
          "BOLD",
        ],
      },
      Object {
        "entity": "1",
        "style": Array [
          "BOLD",
        ],
      },
      Object {
        "entity": "1",
        "style": Array [
          "BOLD",
        ],
      },
      Object {
        "entity": "1",
        "style": Array [
          "BOLD",
        ],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "b",
    "text": "Bravo",
    "type": "unordered-list-item",
  },
  "c": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [
          "ITALIC",
        ],
      },
      Object {
        "entity": null,
        "style": Array [
          "ITALIC",
        ],
      },
      Object {
        "entity": null,
        "style": Array [
          "ITALIC",
        ],
      },
      Object {
        "entity": null,
        "style": Array [
          "ITALIC",
        ],
      },
      Object {
        "entity": null,
        "style": Array [
          "ITALIC",
        ],
      },
      Object {
        "entity": null,
        "style": Array [
          "ITALIC",
        ],
      },
      Object {
        "entity": null,
        "style": Array [
          "ITALIC",
        ],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "c",
    "text": "Charlie",
    "type": "blockquote",
  },
}
`;

exports[`must convert from raw tree draft to raw content state when experimentalTreeDataSupport is disabled 1`] = `
Object {
  "A": Object {
    "characterList": Array [],
    "data": Object {},
    "depth": 0,
    "key": "A",
    "text": "",
    "type": "unstyled",
  },
  "B": Object {
    "characterList": Array [],
    "data": Object {},
    "depth": 0,
    "key": "B",
    "text": "",
    "type": "unstyled",
  },
  "C": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "C",
    "text": "left block",
    "type": "unstyled",
  },
  "D": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "D",
    "text": "right block",
    "type": "unstyled",
  },
  "E": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "E",
    "text": "This is a tree based document!",
    "type": "header-one",
  },
}
`;

exports[`must map falsey block types to default value of unstyled 1`] = `
Object {
  "A": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "A",
    "text": "AAAA",
    "type": "unstyled",
  },
  "B": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "B",
    "text": "BBBB",
    "type": "unstyled",
  },
  "C": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "C",
    "text": "CCCC",
    "type": "unstyled",
  },
}
`;
